After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758457 - Genre fixes
Genre fixes
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-21 15:28 UTC by Bastien Nocera
Modified: 2015-11-23 20:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
genres: Simplify GtkListStore usage (2.42 KB, patch)
2015-11-21 15:28 UTC, Bastien Nocera
committed Details | Review
genres: Fix translated genre being compared to untranslated one (926 bytes, patch)
2015-11-21 15:28 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-11-21 15:28:42 UTC
.
Comment 1 Bastien Nocera 2015-11-21 15:28:47 UTC
Created attachment 316020 [details] [review]
genres: Simplify GtkListStore usage

Pointer arithmetic looks pretty gross, and GtkListStore has functions to
avoid needing to append an iter before inserting the values.
Comment 2 Bastien Nocera 2015-11-21 15:28:52 UTC
Created attachment 316021 [details] [review]
genres: Fix translated genre being compared to untranslated one

If you're running in French, "Classique" will be in the known genres,
but we wouldn't have seen that because we'd compare it to the
untranslated "Classic".
Comment 3 Phillip Wood 2015-11-23 18:20:27 UTC
Review of attachment 316020 [details] [review]:

Looks good apart from comparing the untranslated genre name
Comment 4 Phillip Wood 2015-11-23 18:21:39 UTC
Review of attachment 316021 [details] [review]:

Looks good thanks - I presume you'll squash this into the previous patch before pushing it?
Comment 5 Bastien Nocera 2015-11-23 20:06:42 UTC
(In reply to Phillip Wood from comment #4)
> Review of attachment 316021 [details] [review] [review]:
> 
> Looks good thanks - I presume you'll squash this into the previous patch
> before pushing it?

No, one is styling fixes, the other is a bug fix. I prefer to keep those separate. The first patch doesn't make any functional changes.
Comment 6 Bastien Nocera 2015-11-23 20:10:31 UTC
Attachment 316020 [details] pushed as b68c1fc - genres: Simplify GtkListStore usage
Attachment 316021 [details] pushed as 359b345 - genres: Fix translated genre being compared to untranslated one