genres: Simplify GtkListStore usage

Pointer arithmetic looks pretty gross, and GtkListStore has functions to
avoid needing to append an iter before inserting the values.

https://bugzilla.gnome.org/show_bug.cgi?id=758457